--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "renanluis/cookie-parser",
     "description": "A small library to parse cookies data.",
     "require": {
-        "php": ">=7.4",
-        "another-vendor/package": "1.*"
+        "php": ">=7.4"
     }
 }
